--- a/boss.ini
+++ b/boss.ini
@@ -1,175 +1,186 @@
 ----- 일반보스 -----
-bossname = 기감
-gentime = 01:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+bossname = 브래카
+gentime = 02:30
+nogencheck = 1
+before_alert_ment = 입니다[브래카소굴]
+alert_ment = 입니다. 어여오세요[브래카소굴]
 
-bossname = 거드
+bossname = 체르
 gentime = 03:00
 nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+before_alert_ment = 입니다[체르투바막사]
+alert_ment = 입니다. 어여오세요[체르투바막사]
 
-bossname = 이프
-gentime = 02:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 마요
+bossname = 템페
 gentime = 03:00
 nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+before_alert_ment = 입니다[시체처리소]
+alert_ment = 입니다. 어여오세요[시체처리소]
 
-bossname = 피닉
-gentime = 06:53
+bossname = 펠리스
+gentime = 03:00
 nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+before_alert_ment = 입니다[비하이브]
+alert_ment = 입니다. 어여오세요[비하이브]
 
-bossname = 대흑
-gentime = 03:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+bossname = 판나
+gentime = 03:30
+nogencheck = 1
+before_alert_ment = 입니다[고르곤화원]
+alert_ment = 입니다. 어여오세요[고르곤화원]
 
-bossname = 서드
-gentime = 02:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+bossname = 바실라
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다[황무지남부]
+alert_ment = 입니다. 어여오세요[황무지남부]
 
-bossname = 북드
-gentime = 02:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 중드
-gentime = 03:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 동드
-gentime = 03:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 아르
+bossname = 메두사
 gentime = 04:00
 nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+before_alert_ment = 입니다[메두사의정원]
+alert_ment = 입니다. 어여오세요[메두사의정원]
 
-bossname = 자크
-gentime = 03:00
+bossname = 엔쿠라
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다[디온목초지]
+alert_ment = 입니다. 어여오세요[디온목초지]
+
+bossname = 릴리
+gentime = 04:00
 nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+before_alert_ment = 입니다[죽음의회랑]
+alert_ment = 입니다. 어여오세요[죽음의회랑]
 
-bossname = 카파
-gentime = 02:00
+bossname = 마투라
+gentime = 04:30
+nogencheck = 1
+before_alert_ment = 입니다[약탈자의야영지]
+alert_ment = 입니다. 어여오세요[약탈자의야영지]
+
+bossname = 탈라킨
+gentime = 05:00
 nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+before_alert_ment = 입니다[반란군아지트]
+alert_ment = 입니다. 어여오세요[반란군아지트]
 
-bossname = 웜
-gentime = 02:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 데스
-gentime = 07:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 커츠
-gentime = 10:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 녹샤
-gentime = 02:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 빨샤
-gentime = 02:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 산두
-gentime = 03:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 에자
+bossname = 사르카
 gentime = 05:00
 nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+before_alert_ment = 입니다[델루리자드맨서식지]
+alert_ment = 입니다. 어여오세요[델루리자드맨서식지]
 
-bossname = 스피
-gentime = 03:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 개미
-gentime = 02:00
+bossname = 켈소스
+gentime = 05:00
 nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+before_alert_ment = 입니다[절망의폐허]
+alert_ment = 입니다. 어여오세요[절망의폐허]
 
-bossname = 도펠
-gentime = 04:00
+bossname = 여왕개미
+gentime = 06:00
 nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+before_alert_ment = 입니다[개미굴3층]
+alert_ment = 입니다. 어여오세요[개미굴3층]
 
-bossname = 감데
+bossname = 판드
 gentime = 06:00
 nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+before_alert_ment = 입니다[디온구릉지]
+alert_ment = 입니다. 어여오세요[디온구릉지]
 
-bossname = 대장로
-gentime = 03:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+bossname = 베히
+gentime = 06:00
+nogencheck = 0
+before_alert_ment = 입니다[용의계곡북부]
+alert_ment = 입니다. 어여오세요[용의계곡북부]
 
-bossname = 베리스
-gentime = 03:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+bossname = 스탄
+gentime = 07:00
+nogencheck = 0
+before_alert_ment = 입니다[거인의흔적]
+alert_ment = 입니다. 어여오세요[거인의흔적]
 
-bossname = 케레
-gentime = 03:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+bossname = 티미
+gentime = 08:00
+nogencheck = 0
+before_alert_ment = 입니다[플로란개간지]
+alert_ment = 입니다. 어여오세요[플로란개간지]
 
-bossname = 가스트
-gentime = 03:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+bossname = 크루마
+gentime = 08:00
+nogencheck = 0
+before_alert_ment = 입니다[크루마습지]
+alert_ment = 입니다. 어여오세요[크루마습지]
 
-bossname = 리칸트
+bossname = 오크
+gentime = 08:00
+nogencheck = 0
+before_alert_ment = 입니다[크루마3층]
+alert_ment = 입니다. 어여오세요[크루마3층]
+
+bossname = 코어
 gentime = 10:00
 nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+before_alert_ment = 입니다[크루마7층]
+alert_ment = 입니다. 어여오세요[크루마7층]
 
+bossname = 카탄
+gentime = 10:00
+nogencheck = 0
+before_alert_ment = 입니다[크루마6층]
+alert_ment = 입니다. 어여오세요[크루마6층]
+
+bossname = 사반
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다[개미굴2층]
+alert_ment = 입니다. 어여오세요[개미굴2층]
+
+bossname = 드비
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다[안타동굴6층]
+alert_ment = 입니다. 어여오세요[안타동굴6층]
+
+bossname = 탈킨
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다[레토리자드맨부락]
+alert_ment = 입니다. 어여오세요[레토리자드맨부락]
+
+bossname = 셀루
+gentime = 06:00
+nogencheck = 1
+before_alert_ment = 입니다[파아그리오의제단]
+alert_ment = 입니다. 어여오세요[파아그리오의제단]
+
+bossname = 발보
+gentime = 05:00
+nogencheck = 1
+before_alert_ment = 입니다[산적산채]
+alert_ment = 입니다. 어여오세요[산적산채]
+
+bossname = 티미니엘
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다[티미니엘의보금자리]
+alert_ment = 입니다. 어여오세요[티미니엘의보금자리]
+
+bossname = 오르펜
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다[오르펜의둥지]
+alert_ment = 입니다. 어여오세요[오르펜의둥지]
+
+bossname = 레피로
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다[포자확산지]
+alert_ment = 입니다. 어여오세요[포자확산지]
+
+bossname = 장로
+gentime = 03:30
+nogencheck = 1
+before_alert_ment = 입니다[상아탑1층]
+alert_ment = 입니다. 어여오세요[상아탑1층]
