--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 9
 
-voicechannel = 650094481256874010
-textchannel = 651424885528068109
+voicechannel = 
+textchannel = 
 ladderchannel = 
 jungsanchannel = 
 
