--- a/test_setting.ini
+++ b/test_setting.ini
@@ -2,7 +2,7 @@ timezone = 9
 
 voicechannel = 650094481256874010
 textchannel = 651424885528068109
-ladderchannel = 
+ladderchannel = 683867143221149729
 jungsanchannel = 
 
 before_alert = 1
