--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,8 +1,8 @@
 timezone = 9
 
-voicechannel = 650094481256874010
-textchannel = 651424885528068109
-ladderchannel = 683867143221149729
+voicechannel = 
+textchannel = 
+ladderchannel = 
 jungsanchannel = 
 
 before_alert = 1
