--- a/boss.ini
+++ b/boss.ini
@@ -183,4 +183,16 @@ bossname = 코룬
 gentime = 06:00
 nogencheck = 1
 before_alert_ment = 입니다[상아탑2층]
-alert_ment = 입니다. 어여오세요[상아탑2]
+alert_ment = 입니다. 어여오세요[상아탑2층]
+
+bossname = 트롬바
+gentime = 05:00
+nogencheck = 1
+before_alert_ment = 입니다[피의늪지대]
+alert_ment = 입니다. 어여오세요[피의늪지대]
+
+bossname = 가레스
+gentime = 05:00
+nogencheck = 1
+before_alert_ment = 입니다[타노르협곡]
+alert_ment = 입니다. 어여오세요[타노르협곡]
