--- a/boss.ini
+++ b/boss.ini
@@ -113,7 +113,7 @@ nogencheck = 0
 before_alert_ment = 입니다[크루마습지]
 alert_ment = 입니다. 어여오세요[크루마습지]
 
-bossname = 오크,오염된크루마
+bossname = 오크
 gentime = 08:00
 nogencheck = 0
 before_alert_ment = 입니다[크루마3층]
