--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 693831036550774844
 textchannel = 694522474381049877
 ladderchannel = 
 jungsanchannel = 
