--- a/command.ini
+++ b/command.ini
@@ -17,7 +17,7 @@ command14 = !q
 command15 = !v
 command16 = !리젠
 command17 = !현재시간
-command18 = !적대
+command18 = !파티
 command19 = !상태
 command20 = 보스탐
 command21 = !보스탐
