--- a/command.ini
+++ b/command.ini
@@ -20,6 +20,6 @@ command17 = !현재시간
 command18 = !파티
 command19 = !상태
 command20 = 보스탐
-command21 = /?
+command21 = ?
 command22 = !파티2
 command23 = !대기
