--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -20,7 +20,7 @@ startDate = 2020-04-08
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 코룬
+bossname = 사무엘
 bosstime = 21:00
 genPeriod = 24:00
 startDate = 2020-04-08
