--- a/command.ini
+++ b/command.ini
@@ -1,9 +1,10 @@
 -----command-----
+-----command-----
 command00 = !메뉴
 command01 = !설정확인
 command02 = !채널확인
 command03 = !채널이동
-command04 = !법무부소환
+command04 = !소환
 command05 = !불러오기
 command06 = !초기화
 command07 = !명치
@@ -13,13 +14,21 @@ command10 = !분배
 command11 = !사다리
 command12 = !정산
 command13 = !보스일괄
-command14 = !q
-command15 = !v
+command14 = !ㅂ, !q, !Q
+command15 = !ㅍ, !v, !V
 command16 = !리젠
 command17 = !현재시간
 command18 = !파티
 command19 = !상태
-command20 = 보스탐
+command20 = /1
 command21 = ?
-command22 = !파티2
-command23 = !대기
+command22 = !킬초기화
+command23 = !킬
+command24 = !킬삭제
+command25 = !경주
+command26 = 파티삭제
+command27 = 파티2
+command28 = 파티2삭제
+command29 = 대기
+command30 = 대기삭제
+
