--- a/test_setting.ini
+++ b/test_setting.ini
@@ -4,10 +4,13 @@ voicechannel = 693831036550774844
 textchannel = 694522474381049877
 ladderchannel = 
 jungsanchannel = 
+killchannel = 
+racingchannel = 
 
 before_alert = 1
 before_alert1 = 3
 mungChk = 10
+delmungcnt = 0
 
 bossInfoNum = 3
 
