--- a/command.ini
+++ b/command.ini
@@ -21,14 +21,14 @@ command17 = !현재시간
 command18 = !파티
 command19 = !상태
 command20 = /1
-command21 = ?
+command21 = /?
 command22 = !킬초기화
 command23 = !킬
 command24 = !킬삭제
 command25 = !경주
-command26 = 파티삭제
-command27 = 파티2
-command28 = 파티2삭제
-command29 = 대기
-command30 = 대기삭제
+command26 = !파티삭제
+command27 = !파티2
+command28 = !파티2삭제
+command29 = !대기
+command30 = !대기삭제
 
