--- a/command.ini
+++ b/command.ini
@@ -1,5 +1,4 @@
 -----command-----
------command-----
 command00 = !메뉴
 command01 = !설정확인
 command02 = !채널확인
@@ -18,17 +17,17 @@ command14 = !ㅂ, !q, !Q
 command15 = !ㅍ, !v, !V
 command16 = !리젠
 command17 = !현재시간
-command18 = !파티
+command18 = 파티
 command19 = !상태
 command20 = /1
-command21 = /?
+command21 = ?
 command22 = !킬초기화
 command23 = !킬
 command24 = !킬삭제
 command25 = !경주
-command26 = !파티삭제
-command27 = !파티2
-command28 = !파티2삭제
-command29 = !대기
-command30 = !대기삭제
+command26 = 파티삭제
+command27 = 파티2
+command28 = 파티2삭제
+command29 = 대기
+command30 = 대기삭제
 
