--- a/test_setting.ini
+++ b/test_setting.ini
@@ -4,8 +4,8 @@ voicechannel = 693831036550774844
 textchannel = 694522474381049877
 ladderchannel = 
 jungsanchannel = 
-killchannel = 
-racingchannel = 
+killchannel = 694522474381049877
+racingchannel = 694522474381049877
 
 before_alert = 1
 before_alert1 = 3
