--- a/command.ini
+++ b/command.ini
@@ -13,21 +13,13 @@ command10 = !분배
 command11 = !사다리
 command12 = !정산
 command13 = !보스일괄
-command14 = !ㅂ, !q, !Q
-command15 = !ㅍ, !v, !V
+command14 = !q
+command15 = !v
 command16 = !리젠
 command17 = !현재시간
 command18 = 파티
 command19 = !상태
-command20 = /1
+command20 = 보스탐
 command21 = ?
-command22 = !킬초기화
-command23 = !킬
-command24 = !킬삭제
-command25 = !경주
-command26 = 파티삭제
-command27 = 파티2
-command28 = 파티2삭제
-command29 = 대기
-command30 = 대기삭제
-
+command22 = 파티2
+command23 = 대기
